[package]
name = "asus-touchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
async-io = "1"
async-signal = "0.2.6"
env_logger = "0.11.3"
evdev = "0.12.2"
futures-lite = "2.3.0"
i2cdev = "0.6.0"
log = "0.4.21"
nix = { version = "0.28.0", features = ["fs"] }
regex = "1.10.4"

[profile.release]
lto = "fat"
